# sdk-nrf

applications/nrf_desktop/src/modules/: hid_forward.c
doc/nrf/: links.txt
doc/nrf/releases/: release-notes-1.7.0.rst
doc/nrf/releases_and_maturity/releases/: release-notes-changelog.rst
include/: profiler.h  profiler_backend.h
include/bluetooth/services/: fast_pair.h
include/bluetooth/services/fast_pair/: fast_pair_crypto.h
samples/bluetooth/fast_pair/input_device/: prj.conf
samples/bluetooth/peripheral_fast_pair/: README.rst
samples/bluetooth/peripheral_fast_pair/include/: bt_adv_helper.h
samples/bluetooth/peripheral_fast_pair/src/: bt_adv_helper.c  main.c
samples/bluetooth/peripheral_hids_mouse/: Kconfig  prj.conf
samples/profiler/src/: main.c
scripts/profiler/: model_creator.py  plot_nordic.py  real_time_plot.py  rtt2socket.py  stream.py
subsys/bluetooth/services/: CMakeLists.txt  Kconfig
subsys/bluetooth/services/fast_pair/: CMakeLists.txt  Kconfig.fast_pair  fast_pair_crypto.c  fp_advertising.c  fp_gatt_service.c  fp_keys.c
subsys/partition_manager/: CMakeLists.txt
subsys/profiler/: CMakeLists.txt  Kconfig  profiler_common_shell.c  profiler_generic.c  profiler_nordic.c
tests/bluetooth/fast_pair_crypto/: CMakeLists.txt  README.txt  prj.conf  testcase.yaml
tests/subsys/bluetooth/fast_pair/storage/factory_reset/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/subsys/bluetooth/fast_pair/storage/factory_reset/src/: main.c
tests/subsys/profiler/: CMakeLists.txt  README.txt  prj.conf
tests/subsys/profiler/src/: main.c
(+19 files in other folders)
